# canary-server

./: .gitignore  .gitmodules  .reviewdog.yml  CMakeLists.txt  README.md  build-and-debug.sh  build-and-run.sh  build.sh  config.lua.dist  run-tests.sh
.github/workflows/: build-ubuntu.yml  build-windows.yml  reviewdog.yml
3rd/mariadb-connector-c/: CMakeLists.txt
data/items/: items.xml
data/lib/core/: position.lua
data/scripts/lib/: spells.lua
data/scripts/spells/: arrow_storm.lua  attack_berserk.lua  elemental_fury.lua  frenesi.lua  knight_fury.lua
data/scripts/talkactions/god/: create_item.lua  create_monster.lua
data/world/: canary-spawn.xml
src/: CMakeLists.txt  actions.cpp  ban.cpp  baseevents.cpp  bed.cpp  chat.cpp  combat.cpp  combat.h  condition.cpp  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  creature.cpp  creature.h  creatureevent.h  database.cpp  database.h  databasemanager.cpp  decay.cpp  decay.h  definitions.h  features.h  flatbuffers_wrapper_pool.cpp  flatbuffers_wrapper_pool.h  game.cpp  game.h  globalevent.cpp  guild.cpp  house.cpp  house.h  housetile.cpp  iologindata.cpp  iomapserialize.cpp  iomarket.cpp  item.cpp  items.cpp  items.h  luascript.cpp  (+54 more)
src/singleton/: singleton.hpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  all.h  main.cpp  main.hpp
tests/src/combat/: CombatParams_test.cpp  canDoTargetCombat_test.cpp
vc14/: canary-server.vcxproj  theforgottenserver.vcxproj
